--- a/templates/default/settings-py.erb
+++ b/templates/default/settings-py.erb
@@ -14,4 +14,4 @@ DATABASES = {
 # Disable faulty equipment app
 INSTALLED_APPS = filter(lambda a: a != 'tardis.apps.equipment', INSTALLED_APPS)
 
-ALLOWED_HOSTS = [<%= '"' + node[:ipaddress] + '"' + (node[:fqdn] ? ',"' + node[:fqdn] + '"' : "") %>, 'localhost']
+ALLOWED_HOSTS = [<%= '"' + node[:ipaddress] + '"' + (node[:fqdn] ? ',"' + node[:fqdn] + '"' : "") %>, 'localhost', '127.0.0.1']
